--- a/infra/helm/food-app/templates/httproute.yaml
+++ b/infra/helm/food-app/templates/httproute.yaml
@@ -21,6 +21,10 @@ spec:
         - path:
             type: PathPrefix
             value: {{ .path }}
+      {{- if $.Values.gateway.timeouts }}
+      timeouts:
+        {{- toYaml $.Values.gateway.timeouts | nindent 8 }}
+      {{- end }}
       backendRefs:
         - name: {{ .backend.name }}
           port: {{ .backend.port }}
