--- a/infra/helm/food-app/values.yaml
+++ b/infra/helm/food-app/values.yaml
@@ -637,6 +637,11 @@ migrations:
       initContainers:
         - name: wait-for-recipe-postgres
           image: busybox:1.36
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 65532
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
           command:
             - sh
             - -c
@@ -649,7 +654,7 @@ migrations:
       command:
         - sh
         - -c
-        - npx prisma migrate deploy --config=prisma.config.ts
+        - ./node_modules/.bin/prisma migrate deploy --config=prisma.config.ts
       env:
         - name: DATABASE_URL
           valueFrom:
@@ -659,12 +664,41 @@ migrations:
 
 seed:
   enabled: false
+  confirm: false
   hookWeight: "5"
   allowInProd: false
+  deleteFailedHook: false
   mode: "prisma"
   sqlScripts: {}
   backoffLimit: 1
   ttlSecondsAfterFinished: 300
+  startupDelaySeconds: 120
+  serviceAccountName: ""
+  resources: {}
+  # resources:
+  #   requests:
+  #     cpu: 100m
+  #     memory: 128Mi
+  #   limits:
+  #     cpu: 500m
+  #     memory: 512Mi
+  initContainers:
+    - name: wait-for-recipe-postgres
+      image: busybox:1.36
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 65532
+        allowPrivilegeEscalation: false
+        readOnlyRootFilesystem: true
+      command:
+        - sh
+        - -c
+        - |
+          echo "Waiting for recipe-postgres-headless.recipe.svc.cluster.local:5432...";
+          until nc -z recipe-postgres-headless.recipe.svc.cluster.local 5432; do
+            sleep 2;
+          done;
+          echo "Postgres is ready.";
   image:
     repository: gabeodame/recipe-backend
     pullPolicy: IfNotPresent
@@ -705,6 +739,9 @@ gateway:
   enabled: true
   className: envoy-gateway
   name: food-app-gateway
+  timeouts:
+    request: 60s
+    backendRequest: 60s
   listener:
     name: http
     protocol: HTTP
