ci: add registry pull secret + external secrets support

--- a/infra/helm/food-app/templates/secrets.yaml
+++ b/infra/helm/food-app/templates/secrets.yaml
@@ -103,3 +103,16 @@ stringData:
   AWS_SECRET_ACCESS_KEY: {{ .Values.secrets.s3Secret.data.AWS_SECRET_ACCESS_KEY | quote }}
   AWS_S3_BUCKET: {{ .Values.secrets.s3Secret.data.AWS_S3_BUCKET | quote }}
 {{- end }}
+{{- if and .Values.secrets.enabled .Values.secrets.imagePullSecret.enabled }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.secrets.imagePullSecret.name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "food-app.labels" . | nindent 4 }}
+type: kubernetes.io/dockerconfigjson
+data:
+  .dockerconfigjson: {{ printf "{\"auths\": {\"%s\": {\"username\": \"%s\", \"password\": \"%s\", \"email\": \"%s\", \"auth\": \"%s\"}}}" (required "secrets.imagePullSecret.registry is required" .Values.secrets.imagePullSecret.registry) (required "secrets.imagePullSecret.username is required" .Values.secrets.imagePullSecret.username) (required "secrets.imagePullSecret.password is required" .Values.secrets.imagePullSecret.password) (default "" .Values.secrets.imagePullSecret.email) (printf "%s:%s" .Values.secrets.imagePullSecret.username .Values.secrets.imagePullSecret.password | b64enc) | b64enc | quote }}
+{{- end }}
