--- a/infra/helm/food-app/templates/deployments.yaml
+++ b/infra/helm/food-app/templates/deployments.yaml
@@ -18,10 +18,7 @@ spec:
         app: {{ .appLabel | default .name }}
         {{- include "food-app.labels" $ | nindent 8 }}
     spec:
-      {{- if $.Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
-      {{- end }}
+      {{- include "food-app.imagePullSecrets" $ | nindent 6 }}
       {{- if .initContainers }}
       initContainers:
         {{- toYaml .initContainers | nindent 8 }}
