--- a/infra/helm/food-app/templates/migrations.yaml
+++ b/infra/helm/food-app/templates/migrations.yaml
@@ -24,10 +24,7 @@ spec:
       restartPolicy: OnFailure
       securityContext:
         runAsNonRoot: true
-      {{- if $.Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
-      {{- end }}
+      {{- include "food-app.imagePullSecrets" $ | nindent 6 }}
       {{- if .initContainers }}
       initContainers:
         {{- toYaml .initContainers | nindent 8 }}
