--- a/infra/helm/food-app/templates/seed-job.yaml
+++ b/infra/helm/food-app/templates/seed-job.yaml
@@ -25,10 +25,7 @@ spec:
       restartPolicy: Never
       securityContext:
         runAsNonRoot: true
-      {{- if $.Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
-      {{- end }}
+      {{- include "food-app.imagePullSecrets" $ | nindent 6 }}
       containers:
         - name: recipe-seed
           image: "{{ .Values.seed.image.repository }}:{{ default $.Values.global.imageTag .Values.seed.image.tag }}"
