ci: expand smoke test coverage and external secrets guidance

--- a/infra/helm/food-app/values-staging.yaml
+++ b/infra/helm/food-app/values-staging.yaml
@@ -5,6 +5,12 @@ global:
 seed:
   enabled: false
 
+# secrets:
+#   external:
+#     enabled: true
+#     manifests: |
+#       # ExternalSecret/SecretStore manifests for staging
+
 ingress:
   enabled: false
   host: recipe.staging
