--- a/infra/helm/food-app/values-prod.yaml
+++ b/infra/helm/food-app/values-prod.yaml
@@ -5,6 +5,12 @@ global:
 seed:
   enabled: false
 
+# secrets:
+#   external:
+#     enabled: true
+#     manifests: |
+#       # ExternalSecret/SecretStore manifests for production
+
 ingress:
   enabled: false
   host: recipe.prod
