--- a/infra/helm/jenkins/values.yaml
+++ b/infra/helm/jenkins/values.yaml
@@ -54,6 +54,7 @@ plugins:
     - github-branch-source
     - pipeline-utility-steps
     - pipeline-stage-view
+    - timestamper
     - workflow-aggregator
     - kubernetes
     - kubernetes-cli
@@ -96,6 +97,13 @@ kubectlCli:
   version: "1.30.6"
   downloadUrl: "https://dl.k8s.io/release/v1.30.6/bin/linux/amd64/kubectl"
   binPath: /usr/local/bin/kubectl
+
+nodeCli:
+  enabled: true
+  version: "20.18.1"
+  downloadUrl: "https://nodejs.org/dist/v20.18.1/node-v20.18.1-linux-x64.tar.xz"
+  installDir: /opt/node
+  binDir: /opt/node/bin
 
 jenkinsOpts: "--prefix=/jenkins"
 
