Replace ingress with Gateway API and Kaniko builds

--- a/docs/examples/recipe-client-secret.yaml
+++ b/docs/examples/recipe-client-secret.yaml
@@ -5,4 +5,4 @@ metadata:
   name: recipe-secret
 type: Opaque
 stringData:
-  NEXT_PUBLIC_API_URL: "http://recipe.dev"
+  NEXT_PUBLIC_API_URL: "http://recipe-dev.dishsharing.com"
