--- a/infra/gateway/envs/dev/gateway.yaml
+++ b/infra/gateway/envs/dev/gateway.yaml
@@ -9,20 +9,19 @@ spec:
     - name: http
       protocol: HTTP
       port: 80
-      hostname: recipe.dev
+      hostname: recipe-dev.dishsharing.com
       allowedRoutes:
         namespaces:
           from: Same
-    - name: tls
+    - name: https
       protocol: HTTPS
       port: 443
-      hostname: recipe.dev
+      hostname: recipe-dev.dishsharing.com
       tls:
-        mode: Terminate 
-      certificateRefs:
-    - kind: Secret
-      group: ""
-      name: recipe-dev-tls
+        mode: Terminate
+        certificateRefs:
+          - kind: Secret
+            name: recipe-dev-tls
       allowedRoutes:
         namespaces:
           from: Same
