--- a/infra/gateway/envs/prod/gateway.yaml
+++ b/infra/gateway/envs/prod/gateway.yaml
@@ -9,7 +9,7 @@ spec:
     - name: http
       protocol: HTTP
       port: 80
-      hostname: recipe.prod
+      hostname: recipe.dishsharing.com
       allowedRoutes:
         namespaces:
           from: Same
