--- a/infra/gateway/routes/food-app-httproute.yaml
+++ b/infra/gateway/routes/food-app-httproute.yaml
@@ -7,9 +7,9 @@ spec:
   parentRefs:
     - name: food-app-gateway
   hostnames:
-    - recipe.dev
-    - recipe.staging
-    - recipe.prod
+    - recipe-dev.dishsharing.com
+    - recipe-staging.dishsharing.com
+    - recipe.dishsharing.com
   rules:
     - matches:
         - path:
