ci: use in-cluster SA auth for kubectl/helm (remove local kubeconfig dependency)

--- a/infra/helm/jenkins/templates/serviceaccount.yaml
+++ b/infra/helm/jenkins/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ default (printf "%s-sa" .Release.Name) .Values.serviceAccount.name }}
+  name: {{ include "jenkins.serviceAccountName" . }}
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "jenkins.labels" . | nindent 4 }}
