--- a/infra/helm/jenkins/templates/deployment.yaml
+++ b/infra/helm/jenkins/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app.kubernetes.io/instance: {{ .Release.Name }}
         {{- include "jenkins.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ default (printf "%s-sa" .Release.Name) .Values.serviceAccount.name }}
+      serviceAccountName: {{ include "jenkins.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
         {{- if and .Values.dockerSocket.enabled .Values.dockerSocket.groupId }}
